Fixes the log4j

--- a/build.gradle
+++ b/build.gradle
@@ -109,8 +109,8 @@ dependencies {
 	compileCommon 'org.apache.commons:commons-lang3:3.12.0'
 	compileCommon 'org.apache.httpcomponents:httpcore:4.3.2'
 	compileCommon 'org.apache.httpcomponents:httpclient:4.4.1'
-	compileCommon 'org.apache.logging.log4j:log4j-api:2.0-beta9'
-	compileCommon 'org.apache.logging.log4j:log4j-core:2.0-beta9'
+	compileCommon 'org.apache.logging.log4j:log4j-api:2.0-beta9-fixed'
+	compileCommon 'org.apache.logging.log4j:log4j-core:2.0-beta9-fixed'
 	compileCommon 'commons-logging:commons-logging:1.1.3'
 	compileCommon 'commons-io:commons-io:2.4'
 	compileCommon 'commons-codec:commons-codec:1.9'
